tests/NormalTests/paczka1/fuzzy1/83476857.err
Error in line 3: y6B S511 79,5
Error in line 9: JCa S530 50,8
Error in line 15: JCa S833 80,5
Error in line 14: DXKG S511 64,2
Error in line 35: y6B S833 20,7
Error in line 34: DXKG S833 72,0
Error in line 24: JCa S511 71,1
